# nemu

./: .gitignore  Cargo.toml  DOCUMENTATION.md  FULL_DOCUMENTATION.md  README.md  ancient_temple.toml  example_story.toml  temp_ui.rs  test_story.toml
haunted_house_example/: haunted_house_example.toml
src/: lib.rs  main.rs
src/cli/: create.rs  mod.rs  play.rs  validate.rs
src/engine/: game.rs  game.rs.backup  item.rs  mod.rs  parser.rs  room.rs
src/story/: loader.rs
test_story/: test_story.toml
tests/: integration_test.rs
