[package]
name = "blockyblocky"
version = "0.1.0"
edition = "2021"
description = "An interactive story engine for creating text-based adventure games"
authors = ["BlockyBlocky Contributors"]
license = "MIT"

[[bin]]
name = "bby"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossterm = "0.27"
rusqlite = { version = "0.30", features = ["bundled"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
serde_json = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"